# Gesture-Classifier

./: .gitignore  gesture_classifier_multimodal.ipynb
gesture_classifier_package/: README.md  package.xml  setup.cfg  setup.py
gesture_classifier_package/gesture_classifier/: add_function.py  add_function_lib.py  dataset.py  fine_tune.py  fine_tune_lib.py  io_utils.py  logger_utils.py  models.py  train_utils.py
logger/: meta_runs.csv
logger/20260320_152516__CNN__lr_1e-04__ep_400__hand__early_fusion/: best_model.pt  config.json  confusion_matrix.csv  history.csv  model_structure.txt  result_metrics.csv  result_metrics.json  test_metrics_full.json  test_predictions.csv  train_metrics.json  val_metrics.json
logger/20260320_152647__CNN__lr_1e-04__ep_400__body__early_fusion/: best_model.pt  classification_report.json  config.json  confusion_matrix.csv  history.csv  model_structure.txt  result_metrics.csv  result_metrics.json  test_metrics_full.json  test_predictions.csv  train_metrics.json  val_metrics.json
logger/20260320_152934__CNN__lr_1e-04__ep_400__body+hand__early_fusion/: best_model.pt  classification_report.json  config.json  confusion_matrix.csv  history.csv  result_metrics.csv  result_metrics.json  (+4 more)
logger_add_function/: meta_runs_add_function.csv
logger_finetuning/: best_finetune__CNN__lr_0p01__ep_200__n_100__body+hand.pt  best_finetune__CNN__lr_0p01__ep_200__n_25__body+hand.pt  best_finetune__CNN__lr_0p01__ep_200__n_40__body+hand.pt  best_finetune__CNN__lr_0p01__ep_200__n_50__body+hand.pt  finetune_sweep_summary.csv  meta_runs_finetuning.csv
(+692 files in other folders)
